--- a/package.json
+++ b/package.json
@@ -6,76 +6,62 @@
   "author": "Vitor Bastos <vbss-services@outlook.com>",
   "license": "MIT",
   "scripts": {
-    "build": "rollup --config",
-    "build:auth": "rollup --config src/auth/rollup.config.mjs",
-    "build:batch": "rollup --config src/batch/rollup.config.mjs",
-    "build:image": "rollup --config src/image/rollup.config.mjs",
-    "build:prompt": "rollup --config src/prompt/rollup.config.mjs",
-    "build:user": "rollup --config src/user/rollup.config.mjs",
-    "build:video": "rollup --config src/video/rollup.config.mjs",
+    "start": "node .",
     "dev": "nodemon --config nodemon-dev.json",
-    "dev:auth": "nodemon --config src/auth/nodemon-dev.json",
-    "dev:batch": "nodemon --config src/batch/nodemon-dev.json",
-    "dev:image": "nodemon --config src/image/nodemon-dev.json",
-    "dev:prompt": "nodemon --config src/prompt/nodemon-dev.json",
-    "dev:user": "nodemon --config src/user/nodemon-dev.json",
-    "dev:video": "nodemon --config src/video/nodemon-dev.json",
+    "build": "rollup --config",
     "test": "jest",
-    "test:auth": "jest src/auth/tests",
-    "test:batch": "jest src/batch/tests",
-    "test:image": "jest src/image/tests",
-    "test:prompt": "jest src/prompt/tests",
-    "test:user": "jest src/user/tests",
-    "test:video": "jest src/video/tests",
-    "lint": "eslint ./src --ext .ts",
-    "start": "node ."
+    "lint": "eslint . --ext .ts",
+    "lint:fix": "eslint . --ext .ts --fix",
+    "format": "prettier --write \"src/**/*.ts\"",
+    "format:check": "prettier --check \"src/**/*.ts\""
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^26.0.1",
+    "@eslint/js": "^9.26.0",
+    "@rollup/plugin-commonjs": "^28.0.3",
     "@rollup/plugin-json": "^6.1.0",
-    "@rollup/plugin-node-resolve": "^15.2.3",
-    "@rollup/plugin-typescript": "^11.1.6",
-    "@types/amqplib": "^0.10.5",
-    "@types/bcryptjs": "^2.4.6",
-    "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
-    "@types/jest": "^29.5.13",
-    "@types/jsonwebtoken": "^9.0.7",
+    "@rollup/plugin-node-resolve": "^16.0.1",
+    "@rollup/plugin-typescript": "^12.1.2",
+    "@types/cors": "^2.8.18",
+    "@types/express": "^5.0.1",
+    "@types/jest": "^29.5.14",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/multer": "^1.4.12",
-    "@types/supertest": "^6.0.2",
-    "@typescript-eslint/eslint-plugin": "^6.4.0",
-    "@typescript-eslint/parser": "^7.7.0",
-    "eslint": "^8.0.1",
-    "eslint-config-standard-with-typescript": "^43.0.1",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-n": "^17.2.1",
-    "eslint-plugin-no-relative-import-paths": "^1.5.4",
-    "eslint-plugin-promise": "^6.1.1",
+    "@types/nodemailer": "^6.4.17",
+    "@types/supertest": "^6.0.3",
+    "@typescript-eslint/eslint-plugin": "^8.32.1",
+    "@typescript-eslint/parser": "^8.32.1",
+    "eslint": "^9.26.0",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-prettier": "^5.4.0",
+    "globals": "^16.1.0",
     "jest": "^29.7.0",
-    "nodemon": "^3.1.7",
-    "rollup": "^4.22.2",
-    "supertest": "^7.0.0",
-    "ts-jest": "^29.2.5",
+    "nodemon": "^3.1.10",
+    "prettier": "^3.5.3",
+    "rollup": "^4.40.2",
+    "supertest": "^7.1.1",
+    "ts-jest": "^29.3.3",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.2.0",
-    "tslib": "^2.7.0",
-    "typescript": "^5.6.2"
+    "tslib": "^2.8.1",
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.32.1"
   },
   "dependencies": {
-    "@azure/storage-blob": "^12.25.0",
-    "amqplib": "^0.10.4",
-    "axios": "^1.7.7",
-    "bcryptjs": "^2.4.3",
+    "@azure/storage-blob": "^12.27.0",
+    "axios": "^1.9.0",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
-    "cron": "^3.1.7",
-    "crypto": "^1.0.1",
-    "dotenv": "^16.4.5",
-    "express": "^4.21.0",
-    "express-async-errors": "^3.1.1",
+    "cron": "^4.3.0",
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.6.3",
-    "multer": "^1.4.3",
-    "ts-node": "^10.9.2",
-    "zod": "^3.23.8"
+    "mongoose": "^8.14.3",
+    "multer": "^2.0.0",
+    "nodemailer": "^7.0.3",
+    "pg": "^8.16.0",
+    "reflect-metadata": "^0.2.2",
+    "typeorm": "^0.3.24",
+    "winston": "^3.17.0",
+    "zod": "^3.24.4"
   }
 }
