--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,12 +5,6 @@
     "paths": {
       "@/*": [
         "./src/*"
-      ],
-      "@api/*": [
-        "./src/@api/*"
-      ],
-      "@cron/*": [
-        "./src/@cron/*"
       ]
     },
     "outDir": "./build",
@@ -19,6 +13,7 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
-    "experimentalDecorators": true
-  }
+    "experimentalDecorators": true,
+  },
+  "include": ["src"]
 }
